# inscope

./: .gitignore  README.md  pyproject.toml
examples/: scope.txt
inscope/: __init__.py  audit.py  cli.py  server.py
tests/: conftest.py  test_audit.py  test_cli_json.py  test_inscope.py  test_server.py
